# AML

./: .gitignore  Dockerfile  README.md  api.py  main.py  pyproject.toml  requirements.txt  streamlit.py  test_api.h5
AML-BRATS/data/: data_loading.py
AML-BRATS/models/: train_model.py
AML-BRATS/notebooks/: preliminary_analysis.ipynb
AML_BRATS/config/models/: unet.yaml
AML_BRATS/data/: data_loading.py  download_data.py
AML_BRATS/models/: FCN.py  metrics.py  train_model.py  train_unet.py  train_unet.sh  unet.py
AML_BRATS/notebooks/: preliminary_analysis.ipynb  visualize.ipynb
frontend/: Dockerfile  requirements.txt  streamlit.py
project_name/notebooks/: preliminary_analysis.ipynb
